--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
