--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "three": "^0.162.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
